swapped out links for nav buttons

--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -5,8 +5,8 @@
 	<div class="user-greeting">
 
 		<h3> {{ user }} </h3>
-		<a href="logout.html"> Logout </a>
-		<a href="blog-compose.html"> Compose Post </a>
+		<a href="logout.html"><button type="button" class="btn btn-danger"> Logout </button></a>
+		<a href="blog-compose.html"><button type="button" class="btn btn-primary"> Compose Post </button></a>
 
 	</div>
 
