--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -40,7 +40,7 @@
 
 	            	<div class="col-md-12">	
 
-	            		<div class="blog-compose-field">
+	            		<div class="blog-content-field">
 
 								{{ content }}
 
