added Nav buttons and began formatting blog view pages

--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -24,7 +24,7 @@
 
                 <div class="col-md-12">
 
-                    <div class="signup-form">
+                    <div class="blog-view-title">
 
                         <h3> {{ title }} </h3>
 
@@ -34,7 +34,19 @@
 
             </div>
 
-            
+            <div class="row">
+
+            	<div class="col-md-12">
+
+            		<div class="blog-author-slot">
+
+            			 By <span class="blog-author-text">{{ author }}</span>
+
+            		</div>
+
+            	</div>
+
+            </div>
 
 	            <div class="row">
 
