--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -4,7 +4,6 @@ body {
 
 .container-fluid{
     padding-top: 0;
-    /*width: 100%*/
 }
 
 
@@ -37,10 +36,6 @@ body {
     
 }
 
-.form-control{
-
-
-}
 
 .btn {
 
@@ -89,10 +84,19 @@ body {
 }
 
 .content-pane {
- /*   margin-top: 5px;
-    height: 35vw;*/
 
-    overflow: scroll;
+
+    overflow: auto;
+    overflow-x: hidden;
+    margin-top: .5vw;
+
+    max-height: 20vw;
+
+}
+
+.content-pane-blog-view {
+
+    overflow-y: hidden;
     overflow-x: hidden;
     margin-top: .5vw;
 
@@ -192,20 +196,38 @@ textarea {
     /*padding-bottom: 5px;*/
 }
 
+.blog-view-title {
+    color: white;
+    width: 100%;
+    margin-top: 1vw;
+    text-align: center;
+}
+
+
+.blog-author-slot {
+    margin-left: 75vw;
+    color: orange;
+}
+
+.blog-author-text {
+    color: blue;
+}
+
 .blog-content-field {
 
     margin-top: 20px;
     margin-right: 2%;
-    margin-left: 2%;
+    margin-left: 5%;
     border-radius: 10px;
     color: white;
     font-weight: bold;
     min-height: 400px;
-    
+    width: 80vw;
     height: 100%;
     border-style:solid;
     border-color: black;
-    background: black;
+    background: black
+    word-break: break-all;
 }
 
 
