added edit and back to index nav buttons on blog view page. Need to make edit work.

--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -24,6 +24,12 @@
 
                 <div class="col-md-12">
 
+                	<div class="blog-view-nav">
+
+                		<button type="button" class="btn btn-primary">Back to Main Page</button> <button type="button" class="btn btn-secondary">Edit Post</button>
+
+                	</div>
+
                     <div class="blog-view-title">
 
                         <h3> {{ title }} </h3>
