--- a/templates/blog_view_page_non_authed.html
+++ b/templates/blog_view_page_non_authed.html
@@ -75,6 +75,12 @@
 
 	                <div class="col-md-12">
 
+	                   	<div class="blog-view-nav">
+
+                			<a href="/"><button type="button" class="btn btn-success">Back to Main Page</button></a> 
+
+                		</div>
+
 	                    <div class="blog-view-title">
 
 	                        <h3 class="blog-title"> {{ title }} </h3>
