--- a/templates/blog_view_page_non_authed.html
+++ b/templates/blog_view_page_non_authed.html
@@ -130,4 +130,54 @@
 
 </div>
 
+<!-- Begin Comments -->
+
+{% for comment in comments %}
+
+<div class="blog-comment-box">
+
+
+
+<div class="row">
+
+	<div class="col-md-6">
+
+		<div class="blog-comment-author">
+
+			According to <span class="comment-author-text"> {{ comment['commenter'] }}</span>:
+
+		</div>
+
+	</div>
+
+	<div class="col-md-6">
+
+		<div class="blog-comment-date">
+
+		{{ comment['timestamp'] }}
+
+		</div>
+
+	</div>
+
+</div>
+
+<div class="row">
+
+	<div class="col-md-12">
+
+			<div class="blog-comment-text">
+
+				<o id="comment"> {{ comment['content'] }} </o>
+
+			</div>
+
+	</div>
+
+</div>
+
+</div>
+
+{% endfor %}
+
 {% endblock %}
