--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -112,7 +112,7 @@
 
 					<div class="comment-compose-button">
 
-						<span id="add-comment-button"><button type="submit" name="comment_button" class="btn btn-info">Comment</button></span>
+						<span id="add-comment-button"><button type="submit" name="comment_button" class="btn btn-primary">Comment</button></span>
 
 					</div>
 
@@ -174,11 +174,12 @@
 
 	<div class="row">
 
-		<div class="cold-md-4">
+		<div class="col-md-4">
 
 			<div class="comment-edit-button">
 
 				<button class="btn btn-info">Edit</button>
+				<button class="btn btn-danger">Delete</button>
 
 			</div>
 
