added comment deletion mechanism and associated unit tests

--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -179,7 +179,7 @@
 			<div class="comment-edit-button">
 
 				<button class="btn btn-info">Edit</button>
-				<button class="btn btn-danger">Delete</button>
+				<a href="/delete_comment.html?comment_id={{comment['comment_id']}}&blog_id={{blog_id}}"><button class="btn btn-danger">Delete</button></a>
 
 			</div>
 
