added post deletion and associated unit test

--- a/templates/blog_edit_page.html
+++ b/templates/blog_edit_page.html
@@ -82,6 +82,8 @@
 
 							<button type="submit" class="btn btn-primary"> Update! </button>
 
+							<a href="/delete-post.html?blog_id={{blog_id}}"> <button class="btn btn-danger"> Delete Post </button> </a>
+
 							{% if error %}
 
 								<h3>{{ error }}<h3>
