--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -174,6 +174,10 @@ textarea {
     text-align: right;
 }
 
+.delete-post-text {
+    color: blue;
+}
+
 .comment-compose-header {
     margin-top: 10%;
     margin-left: 4%;
