Turned comment # into link for authed front page

--- a/templates/front_page_authed.html
+++ b/templates/front_page_authed.html
@@ -163,7 +163,7 @@
 
 	            		<div class="blog_comments_button">
 
-	            			<button type="button" id="comment_total_button" class="btn btn-warning"> {{ post['comment_total'] }} Comments </button>
+	            			<a href="view.html?blog_id={{ post['id'] }}"><button type="button" id="comment_total_button" class="btn btn-warning"> {{ post['comment_total'] }} Comments </button></a>
 
 	            		</div>
 
