added header block to templates, added link to reg form on login page and fixed spacing issue on login page.

--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -178,6 +178,12 @@ textarea {
     color: blue;
 }
 
+.login-reg-invitation {
+    color: blue;
+    margin-left: 25%;
+
+}
+
 .comment-compose-header {
     margin-top: 10%;
     margin-left: 4%;
