--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="css/basicblogstyle.css">
 
+        {% block header_block %}
+
+        {% endblock %}
+
     </head>
 
 <div class="container-fluid">
