--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block header_block %}
+
+<title> Basic Blog: {{title}} </title>
+
+{% endblock %}
+
 {% block login_block %}
 
 	<div class="user-greeting">
