--- a/templates/front_page_non_authed.html
+++ b/templates/front_page_non_authed.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block header_block %}
+
+<title> Basic Blog! </title>
+
+{% endblock %}
 
 {% block login_block %}
 	
