--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block header_block %}
+
+<title> Basic Blog: Login </title>
+
+{% endblock %}
+
 {% block posts_block %}
 
 <div class="row">
@@ -24,59 +30,63 @@
 
             <form action="login.html" method="post">
 
-	            <div class="row">
+            <div class="row">
 
-	                <div class="col-md-12">
+                <div class="col-md-12">
 
-	                    <div class="signup-form">
-	                    	
-								<input type="email" class="form-control" name="user_id" id="email-input" aria-describedby="email-subtext" placeholder="email">
+                    <div class="signup-form">
+                    	
+							<input type="email" class="form-control" name="user_id" id="email-input" aria-describedby="email-subtext" placeholder="email">
 
-	                    </div>
+                    </div>
 
-	                </div>
+                </div>
 
-	            </div>
+            </div>
 
-	            <div class="row">
+            <div class="row">
 
-	            	<div class="col-md-12">
+            	<div class="col-md-12">
 
-	            		<div class="signup-form">
+            		<div class="signup-form">
 
-							<input type="password" class="form-control" name="password" id="password-input" placeholder="password">
+						<input type="password" class="form-control" name="password" id="password-input" placeholder="password">
 
-	            		</div>
-
-	            	</div>
-
-	            </div>   
-
-		            <div class="row">
-
-		            	<div class="col-md-12">
-
-		            		<div class="signup-form">
-
-								<button type="submit" class="btn btn-primary"> Submit! </button>
-
-								{% if error %}
-
-									<h3>{{ error }}<h3>
-
-								{% endif %}
-
-		            		</div>
-
-	            		</div>
-
-	            	</div>
+            		</div>
 
             	</div>
 
-        </form>
+            </div>   
 
-        </div>
+            <div class="row">
+
+            	<div class="col-md-12">
+
+            		<div class="signup-form">
+
+						<button type="submit" class="btn btn-primary"> Submit! </button>
+
+						{% if error %}
+
+							<h3>{{ error }}<h3>
+
+						{% endif %}
+
+            		</div>
+
+        		</div>
+
+        	</div>
+
+        	<div class="login-reg-invitation">
+
+        		<a href="/register.html"><h4> Not a member? Register! </h4></a>
+
+        	</div>
+
+    	</div>
+
+        </form>
 
     </div>
 
