--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -32,7 +32,13 @@
 
                 	<div class="blog-view-nav">
 
-                		<button type="button" class="btn btn-primary">Back to Main Page</button> <button type="button" class="btn btn-secondary">Edit Post</button>
+                		<a href="/"><button type="button" class="btn btn-primary">Back to Main Page</button></a>
+
+                		{% if user == author %}
+
+                		<a href="/blog-edit.html?blog_id={{blog_id}}"><button type="button" class="btn btn-secondary">Edit Post</button></a>
+
+                		{% endif %}
 
                 	</div>
 
