fixed typo preventing comment deletion

--- a/templates/delete_comment.html
+++ b/templates/delete_comment.html
@@ -117,7 +117,7 @@
 
 			<div class="comment-delete-confirm">
 			
-				<form action="delete_comment.html" method="POST">
+				<form action="delete-comment.html" method="POST">
 					<p> Delete This Comment? </p>
 					<input type="hidden" value="{{comment_id}}" name="comment_id">
 					<input type="hidden" value="{{blog_id}}" name="blog_id">
