fixed front page formatting and spacing issue

--- a/templates/front_page_authed.html
+++ b/templates/front_page_authed.html
@@ -187,6 +187,8 @@
 
 	{% else %}
 
+	<div class="post-entry">
+
 	<div class="row">
 
 	    <div class="col-md-12">
@@ -199,7 +201,7 @@
 
 	                    <div class="post-title">
 
-	                        <h3> Generic Title </h3>
+	                        <h3> Hello, World! </h3>
 
 	                    </div>
 
@@ -209,7 +211,7 @@
 
 	                    <div class="post-author">
 
-	                        <h3> Generic Author </h3>
+	                        <h3>The Architect</h3>
 
 	                    </div>
 
@@ -223,32 +225,13 @@
 
 	                    <div class="post-content">
 
-	                         <p> No Posts Yet! </p>
+	                         <p> Register and make the first post to replace me! </p>
 
 	                    </div>
 
 	                </div>
 
 	            </div>
-
-	            <div class="row">
-
-	            	<div class="col-md-12">
-
-	            		<div class="post-likes">
-
-	            		</div>
-
-	            	</div>
-
-	            </div>
-
-	        </div>
-
-	    </div>
-
-	</div>
-	</div>
 
 	{% endif %}
 
