--- a/templates/front_page_non_authed.html
+++ b/templates/front_page_non_authed.html
@@ -73,96 +73,98 @@
 
 {% block posts_block %}
 
-<div class="content-pane"> 
 
 	{% if posts|length > 0 %}
 
 	{% for post in posts %}
 
-	<div class="row">
+	<div class="post-entry">
 
-	    <div class="col-md-12">
+		<div class="row">
 
-	        <div class="content-box">
+		    <div class="col-md-12">
 
-	            <div class="row">
+		        <div class="content-box">
 
-	                <div class="col-md-8">
+		            <div class="row">
 
-	                    <div class="post-title">
+		                <div class="col-md-8">
 
-	                        <h3> {{ post['title'] }} </h3>
-	                        
+		                    <div class="post-title">
 
-	                    </div>
+		                        <h3> {{ post['title'] }} </h3>
+		                        
+		                    </div>
 
-	                </div>
+		                </div>
 
-	                <div class="col-md-4">
+		                <div class="col-md-4">
 
-	                    <div class="post-author">
+		                    <div class="post-author">
 
-	                        <h3> {{ post['author'] }} </h3>
+		                        <h3> {{ post['author'] }} </h3>
 
-	                    </div>
+		                    </div>
 
-	                </div>
+		                </div>
 
-	            </div>
+		            </div>
 
-	            <div class="row">
+		            <div class="row">
 
-	                <div class="col-md-12">
+		                <div class="col-md-12">
 
-	                    <div class="post-content">
+		                    <div class="post-content">
 
-	                         <p> {{ post['content'] }} </p>
+		                         <p> {{ post['content'] }} </p>
 
-	                    </div>
+		                    </div>
 
-	                </div>
+		                </div>
 
-	            </div>
+		            </div>
 
-	            <div class="row">
+		            <div class="row">
 
-	            	<div class="col-md-4">
+		            	<div class="col-md-4">
 
-	            		<div class="post-likes">
+		            		<div class="post-likes">
 
-            				<span id='likes{{ post["id"] }}'> {{ post['likes'] }} </span> <br>
+	            				<span id='likes{{ post["id"] }}'> {{ post['likes'] }} </span> <br>
 
-            				<a href='login.html'><button type="button" class="btn btn-success">Like!</button></a>
+	            				<a href='login.html'><button type="button" class="btn btn-success">Like!</button></a>
 
-	            		</div>
+		            		</div>
 
-	            	</div>
+		            	</div>
 
-	            	<div class="col-md-4">
+		            	<div class="col-md-4">
 
-	            		<div class="read_blog_button">
+		            		<div class="read_blog_button">
 
-	            			<a href="view.html?blog_id={{ post['id'] }}"><button type="button" class="btn btn-default">Read More</button></a>
+		            			<a href="view.html?blog_id={{ post['id'] }}"><button type="button" class="btn btn-default">Read More</button></a>
 
-	            		</div>
+		            		</div>
 
-	            	</div>
+		            	</div>
 
-	            	<div class="col-md-4">
+		            	<div class="col-md-4">
 
-	            		<div class="blog_comments_button">
+		            		<div class="blog_comments_button">
 
-	            			<a href="view.html?blog_id={{ post['id'] }}"><button type="button" id="comment_total_button" class="btn btn-warning"> {{ post['comment_total'] }} Comments </button></a>
+		            			<a href="view.html?blog_id={{ post['id'] }}"><button type="button" id="comment_total_button" class="btn btn-warning"> {{ post['comment_total'] }} Comments </button></a>
 
-	            		</div>
+		            		</div>
 
-	            	</div>
+		            	</div>
 
-	            </div>
+		            </div>
 
-	        </div>
+		        </div>
 
-	    </div>
+		    </div>
+
+		</div>
 
 	</div>
 
@@ -171,6 +173,8 @@
 
 	{% else %}
 
+	<div class="post-entry">
+
 	<div class="row">
 
 	    <div class="col-md-12">
@@ -183,7 +187,7 @@
 
 	                    <div class="post-title">
 
-	                        <h3> Generic Title </h3>
+	                        <h3> Hello, World! </h3>
 
 	                    </div>
 
@@ -193,7 +197,7 @@
 
 	                    <div class="post-author">
 
-	                        <h3> Generic Author </h3>
+	                        <h3>The Architect</h3>
 
 	                    </div>
 
@@ -207,7 +211,7 @@
 
 	                    <div class="post-content">
 
-	                         <p> No Posts Yet! </p>
+	                         <p> Register and make the first post to replace me! </p>
 
 	                    </div>
 
@@ -215,27 +219,8 @@
 
 	            </div>
 
-	            <div class="row">
-
-	            	<div class="col-md-12">
-
-	            		<div class="post-likes">
-
-	            		</div>
-
-	            	</div>
-
-	            </div>
-
-	        </div>
-
-	    </div>
-
-	</div>
-
 	{% endif %}
 
-</div>
 
 {% endblock %}
                     <!-- End Individual Post --> 
