--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -91,8 +91,8 @@ body {
     overflow: auto;
     overflow-x: hidden;
     margin-top: .5vw;
-
-    max-height: 20vw;
+    min-height: 20vw;
+    max-height: 40vw;
 
 }
 
