--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
+<html>
+
 <div class="container-fluid">
 
-<html>
+
 
     <head>
 
@@ -17,11 +19,7 @@
 
     </head>
 
-
-
     <body>
-
-        
 
             <div class="row">
 
@@ -29,7 +27,7 @@
 
                     <div class="top-logo">
 
-                        <h1> BasicBlog </h1>
+                        <a href="/"><h1> BasicBlog </h1></a>
 
                     </div>
 
@@ -79,7 +77,7 @@
 
                     <div class="footer-content">
 
-                    ending stuff
+                    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />All work on this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 
                     </div>
 
