swapped register link for register button and updated tests accordingly.

--- a/templates/front_page_non_authed.html
+++ b/templates/front_page_non_authed.html
@@ -38,28 +38,18 @@
 
 			<div class="row">
 
-				<div class="col-md-4">
+				<div class="col-md-6">
 
 					<div class="login-form">
 
-						<button name ="login-submit" type="submit" class="btn btn-primary"> Submit! </button>
-
-					</div>
-
-				</div>
-
-				<div class="col-md-8">
-
-					<div class="signup-link">
-
-						<a href="register.html"> Not a Member? Register! </a>
+						<button name ="login-choice" value="login" id="login-submit" type="submit" class="btn btn-primary"> Submit! </button>
+						<a href="register.html"> <button name="login-choice" value="register" id="register-submit" class="btn btn-secondary"> Register </button> </a>
 
 					</div>
 
 				</div>
 
 			</div>
-
 
 		</form>
 
