--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -263,10 +263,9 @@ textarea {
     border-radius: 10px;
     background: #0d6ee5;
     color: black;
-    margin-top: 0;
     margin-bottom: 5px;
     margin-right: 10px;
-    
+    padding-left: 2px;
     height: 100%;
 
 }
